--- a/package.json
+++ b/package.json
@@ -1,183 +1,199 @@
 {
-    "name": "paper_ionic",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "node --max-old-space-size=4096 --stack-size=1968 node_modules/@ionic/app-scripts/bin/ionic-app-scripts.js build",
-        "ionic:serve": "ionic-app-scripts serve",
-        "staging": "SET MY_ENV=staging&& ionic-app-scripts serve",
-        "prod": "SET MY_ENV=prod&& ionic-app-scripts serve",
-        "test": "karma start ./test-config/karma.conf.js",
-        "test-ci": "karma start ./test-config/karma.conf.js --single-run",
-        "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
-        "e2e": "npm run e2e-update && npm run e2e-test",
-        "e2e-test": "protractor ./test-config/protractor.conf.js",
-        "e2e-update": "webdriver-manager update --standalone false --gecko false"
+  "name": "paper_ionic",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "node --max-old-space-size=4096 --stack-size=1968 node_modules/@ionic/app-scripts/bin/ionic-app-scripts.js build",
+    "ionic:serve": "ionic-app-scripts serve",
+    "staging": "SET MY_ENV=staging&& ionic-app-scripts serve",
+    "prod": "SET MY_ENV=prod&& ionic-app-scripts serve",
+    "test": "karma start ./test-config/karma.conf.js",
+    "test-ci": "karma start ./test-config/karma.conf.js --single-run",
+    "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
+    "e2e": "npm run e2e-update && npm run e2e-test",
+    "e2e-test": "protractor ./test-config/protractor.conf.js",
+    "e2e-update": "webdriver-manager update --standalone false --gecko false"
+  },
+  "dependencies": {
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^5.2.1",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.1",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@ionic-native/app-update": "^3.14.0",
+    "@ionic-native/app-version": "3.12.1",
+    "@ionic-native/clevertap": "^5.22.0",
+    "@ionic-native/clipboard": "^3.14.0",
+    "@ionic-native/contacts": "3.12.1",
+    "@ionic-native/core": "^4.3.2",
+    "@ionic-native/deeplinks": "^5.0.0",
+    "@ionic-native/device": "^3.14.0",
+    "@ionic-native/email-composer": "3.12.1",
+    "@ionic-native/facebook": "^3.14.0",
+    "@ionic-native/file": "3.12.1",
+    "@ionic-native/file-opener": "3.12.1",
+    "@ionic-native/file-transfer": "4.7.0",
+    "@ionic-native/firebase-analytics": "^5.22.0",
+    "@ionic-native/google-analytics": "^3.14.0",
+    "@ionic-native/google-maps": "3.12.1",
+    "@ionic-native/image-picker": "3.12.1",
+    "@ionic-native/in-app-browser": "^3.14.0",
+    "@ionic-native/network": "3.12.1",
+    "@ionic-native/social-sharing": "3.12.1",
+    "@ionic-native/splash-screen": "^4.3.2",
+    "@ionic-native/status-bar": "^4.3.2",
+    "@ionic-native/toast": "3.12.1",
+    "@ionic/cli": "^6.2.0",
+    "@ionic/storage": "2.0.1",
+    "@material/chips": "^3.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.1",
+    "@ngrx/store-devtools": "^3.2.3",
+    "@ngx-translate/core": "^8.0.0",
+    "@ngx-translate/http-loader": "^2.0.0",
+    "angular2-uuid": "^1.1.1",
+    "clevertap-cordova": "^2.1.8",
+    "cordova": "^9.0.0",
+    "cordova-android": "^8.1.0",
+    "cordova-clipboard": "1.3.0",
+    "cordova-plugin-androidx": "^1.0.2",
+    "cordova-plugin-androidx-adapter": "^1.1.0",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-contacts": "3.0.1",
+    "cordova-plugin-device": "2.0.3",
+    "cordova-plugin-email-composer": "0.9.2",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-file-opener2": "3.0.0",
+    "cordova-plugin-firebase-analytics": "^4.0.1",
+    "cordova-plugin-network-information": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.3",
+    "cordova-plugin-statusbar": "2.4.3",
+    "cordova-plugin-telerik-imagepicker": "^2.1.8",
+    "cordova-plugin-whitelist": "1.3.4",
+    "cordova-plugin-x-socialsharing": "5.6.4",
+    "cordova-plugin-x-toast": "2.7.2",
+    "cordova-sqlite-storage": "4.0.0",
+    "cordova-support-android-plugin": "^1.0.1",
+    "cordova-support-google-services": "^1.3.2",
+    "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
+    "customerio-node": "^0.5.0",
+    "dirname-regex": "^1.0.0",
+    "es6-promise-plugin": "^4.2.2",
+    "imgcache.js": "^1.1.1",
+    "ionic-angular": "^3.8.0",
+    "ionic-plugin-deeplinks": "1.0.20",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "moment": "^2.19.1",
+    "ng-socket-io": "^0.2.4",
+    "ng2-charts": "^1.6.0",
+    "ng2-progressbar": "^1.3.0",
+    "ngx-socket-io": "1.0.8",
+    "paper-planes": "0.0.5",
+    "rxjs": "^5.5.2",
+    "sentry-cordova": "^0.17.0",
+    "socket.io-client": "^2.2.0",
+    "sw-toolbox": "3.6.0",
+    "vanilla-masker": "^1.2.0",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.2.4",
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "@types/jasmine": "^2.8.4",
+    "@types/node": "^8.5.8",
+    "angular2-template-loader": "^0.6.2",
+    "chalk": "^2.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "fs": "0.0.1-security",
+    "gulp-sass": "^3.1.0",
+    "html-loader": "^0.5.4",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-typescript": "^3.0.9",
+    "karma-webpack": "^2.0.9",
+    "null-loader": "^0.1.1",
+    "path": "^0.12.7",
+    "protractor": "^5.2.2",
+    "ts-loader": "^2.3.7",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-app-version": {},
+      "sentry-cordova": {
+        "SENTRY_ANDROID_SDK_VERSION": "1+"
+      },
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      },
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-contacts": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-clipboard": {},
+      "cordova-plugin-file": {},
+      "clevertap-cordova": {
+        "CLEVERTAP_ACCOUNT_ID": "TEST-K7W-78K-W85Z",
+        "CLEVERTAP_TOKEN": "TEST-3ba-0a3",
+        "CLEVERTAP_REGION": " "
+      },
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Choose Photo"
+      },
+      "cordova-plugin-firebase-analytics": {
+        "FIREBASE_ANALYTICS_VERSION": "17.2.+"
+      },
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
-    "dependencies": {
-        "@angular/animations": "^5.2.11",
-        "@angular/cdk": "^5.2.1",
-        "@angular/common": "^5.2.0",
-        "@angular/compiler": "^5.2.0",
-        "@angular/compiler-cli": "^5.2.0",
-        "@angular/core": "^5.2.0",
-        "@angular/forms": "^5.2.0",
-        "@angular/http": "^5.2.0",
-        "@angular/material": "^5.2.1",
-        "@angular/platform-browser": "^5.2.0",
-        "@angular/platform-browser-dynamic": "^5.2.0",
-        "@ionic-native/app-update": "^3.14.0",
-        "@ionic-native/app-version": "3.12.1",
-        "@ionic-native/clevertap": "^5.22.0",
-        "@ionic-native/clipboard": "^3.14.0",
-        "@ionic-native/contacts": "3.12.1",
-        "@ionic-native/core": "^4.3.2",
-        "@ionic-native/deeplinks": "^5.0.0",
-        "@ionic-native/device": "^3.14.0",
-        "@ionic-native/email-composer": "3.12.1",
-        "@ionic-native/facebook": "^3.14.0",
-        "@ionic-native/file": "3.12.1",
-        "@ionic-native/file-opener": "3.12.1",
-        "@ionic-native/file-transfer": "4.7.0",
-        "@ionic-native/firebase-analytics": "3.12.1",
-        "@ionic-native/google-analytics": "^3.14.0",
-        "@ionic-native/google-maps": "3.12.1",
-        "@ionic-native/image-picker": "3.12.1",
-        "@ionic-native/in-app-browser": "^3.14.0",
-        "@ionic-native/network": "3.12.1",
-        "@ionic-native/social-sharing": "3.12.1",
-        "@ionic-native/splash-screen": "^4.3.2",
-        "@ionic-native/status-bar": "^4.3.2",
-        "@ionic-native/toast": "3.12.1",
-        "@ionic/cli": "^6.2.0",
-        "@ionic/storage": "2.0.1",
-        "@material/chips": "^3.2.0",
-        "@ngrx/core": "^1.2.0",
-        "@ngrx/store": "^2.2.1",
-        "@ngrx/store-devtools": "^3.2.3",
-        "@ngx-translate/core": "^8.0.0",
-        "@ngx-translate/http-loader": "^2.0.0",
-        "angular2-uuid": "^1.1.1",
-        "clevertap-cordova": "^2.1.8",
-        "com.synconset.imagepicker": "^2.1.10",
-        "cordova": "^9.0.0",
-        "cordova-android": "^8.1.0",
-        "cordova-clipboard": "1.3.0",
-        "cordova-plugin-app-version": "^0.1.9",
-        "cordova-plugin-contacts": "3.0.1",
-        "cordova-plugin-device": "2.0.3",
-        "cordova-plugin-email-composer": "0.9.2",
-        "cordova-plugin-file": "6.0.2",
-        "cordova-plugin-file-opener2": "3.0.0",
-        "cordova-plugin-firebase-analytics": "4.0.1",
-        "cordova-plugin-google-analytics": "~1.8.6",
-        "cordova-plugin-network-information": "2.0.2",
-        "cordova-plugin-splashscreen": "5.0.3",
-        "cordova-plugin-statusbar": "2.4.3",
-        "cordova-plugin-telerik-imagepicker": "^2.1.8",
-        "cordova-plugin-whitelist": "1.3.4",
-        "cordova-plugin-x-socialsharing": "5.6.4",
-        "cordova-plugin-x-toast": "2.7.2",
-        "cordova-sqlite-storage": "4.0.0",
-        "cordova-support-android-plugin": "^1.0.1",
-        "cordova-support-google-services": "1.3.2",
-        "core-js": "^2.4.1",
-        "crypto-js": "^3.1.9-1",
-        "customerio-node": "^0.5.0",
-        "dirname-regex": "^1.0.0",
-        "es6-promise-plugin": "^4.2.2",
-        "imgcache.js": "^1.1.1",
-        "ionic-angular": "^3.8.0",
-        "ionic-plugin-deeplinks": "1.0.20",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "moment": "^2.19.1",
-        "ng-socket-io": "^0.2.4",
-        "ng2-charts": "^1.6.0",
-        "ng2-progressbar": "^1.3.0",
-        "ngx-socket-io": "1.0.8",
-        "paper-planes": "0.0.5",
-        "rxjs": "^5.5.2",
-        "sentry-cordova": "^0.17.0",
-        "socket.io-client": "^2.2.0",
-        "sw-toolbox": "3.6.0",
-        "vanilla-masker": "^1.2.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.2.4",
-        "@ionic/cli-plugin-cordova": "1.6.2",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "@types/jasmine": "^2.8.4",
-        "@types/node": "^8.5.8",
-        "angular2-template-loader": "^0.6.2",
-        "chalk": "^2.3.0",
-        "fs": "0.0.1-security",
-        "gulp-sass": "^3.1.0",
-        "html-loader": "^0.5.4",
-        "istanbul-instrumenter-loader": "^3.0.0",
-        "jasmine": "2.8.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "^1.7.1",
-        "karma-chrome-launcher": "^2.2.0",
-        "karma-coverage-istanbul-reporter": "^1.3.3",
-        "karma-jasmine": "^1.1.1",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "karma-phantomjs-launcher": "^1.0.4",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "0.0.32",
-        "karma-typescript": "^3.0.9",
-        "karma-webpack": "^2.0.9",
-        "null-loader": "^0.1.1",
-        "path": "^0.12.7",
-        "protractor": "^5.2.2",
-        "ts-loader": "^2.3.7",
-        "ts-node": "^3.3.0",
-        "typescript": "^2.4.2"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "ionic-plugin-keyboard": {},
-            "com.synconset.imagepicker": {
-                "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Upload Logo atau Tanda Tangan"
-            },
-            "cordova-plugin-app-version": {},
-            "cordova-plugin-google-analytics": {
-                "GMS_VERSION": "11.0.1"
-            },
-            "sentry-cordova": {
-                "SENTRY_ANDROID_SDK_VERSION": "1+"
-            },
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-x-socialsharing": {},
-            "cordova-plugin-x-toast": {},
-            "cordova-plugin-contacts": {},
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-firebase-analytics": {},
-            "cordova-plugin-file-opener2": {},
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-email-composer": {},
-            "cordova-clipboard": {},
-            "cordova-support-google-services": {},
-            "cordova-plugin-file": {},
-            "clevertap-cordova": {
-                "CLEVERTAP_ACCOUNT_ID": "TEST-A8S-78X-W44Z",
-                "CLEVERTAP_TOKEN": "TEST-3oa-0k4"
-            }
-        },
-        "platforms": []
-    },
-    "config": {
-        "ionic_webpack": "./config/webpack.config.js",
-        "ionic_generate_source_map": "true"
-    }
+    "platforms": [
+      "android"
+    ]
+  },
+  "config": {
+    "ionic_webpack": "./config/webpack.config.js",
+    "ionic_generate_source_map": "true",
+    "ionic_copy": "./config/copy.config.js"
+  }
 }
